# django-htmx-app-demo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.slim  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  go.sh  heroku.yml  pyproject.toml  requirements.txt  sonar-project.properties  up.sh
.github/workflows/: build.yml  ci.yml
collectedstatic/js/: dialog.js
core/: settings.py  urls.py  views.py
core/settings/: __init__.py  base_settings.py  local_settings.py  prod_settings.py
notecards/: forms.py  urls.py
notecards/migrations/: 0002_rename_description_notecard_content_and_more.py
notecards/templates/notecards/: index.html
notecards/templates/notecards/partials/: notecard_form.html  notecard_item.html
src/: docker-entrypoint.sh  pyproject.toml  requirements.txt
src/core/: settings.py  urls.py  views.py  wsgi.py
src/core/settings/: __init__.py  base_settings.py  compose_settings.py  local_settings.py  prod_settings.py  staging_settings.py
src/notecards/: apps.py  forms.py  models.py  urls.py  views.py
src/notecards/migrations/: 0001_initial.py  0002_rename_description_notecard_content_and_more.py
src/notecards/templates/notecards/: index.html
src/notecards/templates/notecards/partials/: notecard_detail.html  notecard_form.html  notecard_list.html
src/static/js/: main.js
src/templates/: base.html  index.html
src/templates/partials/: navbar.html
templates/: base.html  index.html
templates/partials/: navbar.html
