[tool.poetry]
name = "django-htmx-alplinejs-demo"
version = "0.1.0"
description = ""
authors = ["wilinger"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.4"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
