[tool.poetry]
name = "django-htmx-app-demo"
version = "0.1.0"
description = ""
authors = ["wilinger"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.0"
django-bootstrap-v5 = "^1.0.11"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
django-htmx = "^1.8.0"
Unidecode = "^1.3.2"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.4"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
