[tool.poetry]
name = "django-htmx-app-demo"
version = "0.1.0"
description = ""
authors = ["wilinger"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-bootstrap-v5 = "^1.0.11"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
django-htmx = "^1.9.0"
Unidecode = "^1.3.2"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.0.0"
gunicorn = "^20.1.0"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.4"
black = "^22.1.0"
doppler-env = "^0.2.2"
detect-secrets = "^1.2.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
py36 = true
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | blib2to3
    | tests/data
)/
'''

[tool.isort]
profile = "black"
